fix resizer + sort

--- a/demo.html
+++ b/demo.html
@@ -75,8 +75,9 @@
       <li><code>sticky</code> to enable stick headers and footers</li>
       <li><code>expand</code> to keep cell data on one line (hover to show full cell)</li>
       <li><code>resizable</code> to make resizable columns</li>
+      <li><code>sort=true</code> to make sortable columns</li>
     </ul>
-    <data-grid url="demo.json" sticky expand resizable></data-grid>
+    <data-grid url="demo.json" sticky expand resizable sort="true" debug="true"></data-grid>
 
     <h2>Scrollable</h2>
 
