improve resize + reorder compat

--- a/demo.html
+++ b/demo.html
@@ -78,7 +78,7 @@
       <li><code>autosize</code> to make resizable columns</li>
       <li><code>sort=true</code> to make sortable columns</li>
     </ul>
-    <data-grid url="demo.json" sticky expand autosize sort="true" debug="true"></data-grid>
+    <data-grid id="basic-demo" url="demo.json" sticky expand autosize resizable reorder="true" sort="true" debug="true"></data-grid>
 
     <h2>Responsive</h2>
 
