--- a/demo.html
+++ b/demo.html
@@ -33,6 +33,16 @@
       word-break: break-all;
     }
 
+    .is-danger {
+      background: red;
+      color: #fff;
+    }
+
+    .is-danger:hover,
+    .is-danger:focus {
+      background: darkred;
+    }
+
     .highlight-col {
       background-color: palegoldenrod;
     }
@@ -96,10 +106,12 @@
     document.getElementById("create-grid").addEventListener("click", (ev) => {
       let grid = new DataGrid({
         url: "demo.json",
+        id: "test-grid",
         sticky: true,
-        expand: true,
+        // expand: true,
         perPageValues: [10, 100, 1000],
         selectable: true,
+        autosize: true,
         columns: [
           {
             field: "id",
@@ -112,6 +124,17 @@
         ]
       });
       ev.target.after(grid);
+      document.getElementById("destroy-grid").removeAttribute("disabled");
+    });
+    document.getElementById("destroy-grid").addEventListener("click", (ev) => {
+      let grid = document.getElementById("test-grid");
+      grid.remove();
+      document.getElementById("destroy-grid").setAttribute("disabled", "");
+    });
+
+    document.getElementById("demo2-grid").addEventListener("action", (ev) => {
+      let z = document.getElementById("debug-zone");
+      z.innerText = JSON.stringify(ev.detail);
     });
   </script>
 </head>
@@ -157,6 +180,8 @@
     <button id="clear-filter">Clear filter</button>
     <data-grid id="demo2-grid" url="demo2.json" filter="true" sort="true" reorder="true" default-sort="id" debug="true" sticky></data-grid>
 
+    <textarea name="" id="debug-zone" cols="30" rows="10"></textarea>
+
     <h2>Empty grid</h2>
 
     <button id="load">Load grid data</button> <button id="reload">Reload data</button> <button id="clear">Clear data</button>
@@ -173,6 +198,7 @@
     <h2>Dom api</h2>
 
     <button id="create-grid">Create grid</button>
+    <button id="destroy-grid" disabled>Destroy grid</button>
 
     <h2>Good to know</h2>
 
