adjust expand mechanic

--- a/demo.html
+++ b/demo.html
@@ -165,7 +165,7 @@
 
     <ul>
       <li><code>sticky</code> to enable stick headers and footers (usable with fixed height)</li>
-      <li><code>expand</code> to keep cell data on one line (hover to show full cell)</li>
+      <li><code>expand</code> to allow cell content to spawn over multiple lines</li>
       <li><code>resizable</code> to make resizable columns</li>
       <li><code>autosize=true</code> to compute column sizes automatically</li>
       <li><code>sort=true</code> to make sortable columns</li>
