allow default action on row

--- a/demo.html
+++ b/demo.html
@@ -146,7 +146,7 @@
       }
       let grid2 = document.getElementById("not-found-grid");
       if (grid2) {
-        grid.remove();
+        grid2.remove();
       }
     });
 
