--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,7 @@
     });
     document.getElementById("clear-filter").addEventListener("click", (ev) => {
       let grid = document.getElementById("demo2-grid");
-      grid.clearFilter(); // you can call methods directly
+      grid.clearFilters(); // you can call methods directly
     });
     document.getElementById("get-selection").addEventListener("click", (ev) => {
       let grid = document.getElementById("basic-demo");
