--- a/demo-server.html
+++ b/demo-server.html
@@ -44,7 +44,7 @@
     <p>Server parameters are sent as query string and are <code>start</code>, <code>length</code> and <code>search</code>.</p>
     <p>To enable server mode, use <code>server=true</code></p>
 
-    <data-grid id="server-demo" style="height:600px" url="demo-server.php" expand resizable sticky selectable autosize="true" filter="true" sort="true" debug="true" server="true"></data-grid>
+    <data-grid id="server-demo" style="height:600px" url="demo-server.php" expand resizable sticky selectable autosize="true" filter="true" sort="true" debug="true" server="true" sticky="true"></data-grid>
 
   <footer>
     <hr />
