--- a/demo-server.html
+++ b/demo-server.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="data-grid.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" type="module"></script>
   <script type="module">
+    // import DataGridContextMenu from "./plugins/context-menu.js";
+    // import DataGridDraggableHeaders from "./plugins/draggable-headers.js";
     import DataGrid from './data-grid.min.js';
 
     var toastLiveExample = document.getElementById('liveToast')
@@ -71,8 +73,8 @@
     <p>Server parameters are sent as query string and are <code>start</code>, <code>length</code> and <code>search</code>.</p>
     <p>To enable server mode, use <code>server=true</code></p>
 
-    <data-grid id="server-demo" style="height:600px" url="demo-server.php" expand resizable sticky selectable autosize="true" filter="true" sort="true" debug="true" server="true"
-      sticky="true"></data-grid>
+    <data-grid id="server-demo" style="height:600px" url="demo-server.php" expand resizable sticky selectable filter="true" sort="true" debug="true" server="true"
+      sticky="true" reorder="false"></data-grid>
 
     <footer>
       <hr />
