--- a/demo.html
+++ b/demo.html
@@ -7,12 +7,16 @@
 
   <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/last-icon@1/last-icon.js">
   <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@1/last-icon.js"></script>
+
   <script type="module">
     window['DataGridLabels'] = {
       page: "Go to page",
       gotoPage: "Go to page",
     };
   </script>
+  <script type="module" src="plugins/column-resizer.js"></script>
+  <script type="module" src="plugins/context-menu.js"></script>
+  <script type="module" src="plugins/draggable-headers.js"></script>
   <script type="module" src="data-grid.min.js"></script>
 
   <link rel="icon" type="image/svg+xml"
