--- a/demo.html
+++ b/demo.html
@@ -58,6 +58,10 @@
     tr.pending td {
       background-color: azure;
     }
+
+    body {
+      overflow-x: auto;
+    }
   </style>
   <script type="module">
     import DataGrid from './data-grid.min.js';
