--- a/demo/responsive.html
+++ b/demo/responsive.html
@@ -84,6 +84,7 @@
         Prioritize column by using 'responsive' key in column definition. Without it, last column goes first. It also works with the context
         menu.
       </p>
+      <p>On small size, a compact footer is used.</p>
 
       <div class="container g-0 mb-4 mw-100">
         <div class="resize-me">
