move row actions to separate plugin

--- a/demo/server.html
+++ b/demo/server.html
@@ -89,7 +89,7 @@
     <data-grid 
       id="server-demo" 
       sticky
-      data-url="http://localhost:8002/demo-server.php" 
+      data-url="demo-server.php" 
       data-filter="true"
       data-sort="true"
       data-debug="true"
@@ -102,7 +102,7 @@
     <data-grid 
       id="invalid-demo" 
       sticky
-      data-url="http://localhost:8002/invalid-server.php" 
+      data-url="invalid-server.php" 
       data-filter="true"
       data-sort="true"
       data-debug="true"
