tweak expand styles

--- a/demo/actions.html
+++ b/demo/actions.html
@@ -70,14 +70,14 @@
       </p>
       <p></p>
       <div class="container g-0 mb-4 mw-100">
-        <data-grid id="action-demo" data-url="demo-actions.json" data-debug="true"></data-grid>
+        <data-grid id="action-demo" data-url="demo-actions.json" data-debug="true" data-expand="true"></data-grid>
       </div>
 
       <textarea name="" id="debug-zone" cols="30" rows="10" style="width: 100%"></textarea>
 
-      <p>Multiple actions can be collapsed</p>
+      <p>Multiple actions (> 2) will collapse. This can be forced with <code>collapseActions=true</code></p>
       <div class="container g-0 mb-4 mw-100">
-        <data-grid id="action2-demo" data-url="demo-actions2.json" data-debug="true"></data-grid>
+        <data-grid id="action2-demo" data-url="demo-actions2.json" data-debug="true" data-expand="true"></data-grid>
       </div>
     </main>
     <footer>
