--- a/demo/index.html
+++ b/demo/index.html
@@ -25,11 +25,24 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.css" />
     <!-- include bootstrap just to make sure it doesn't conflict with our styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mvp.css@1/mvp.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../data-grid.min.css" />
     <link rel="stylesheet" href="demo.css" />
 
+    <script type="module">
+      document.querySelector("#darkmode").addEventListener("click", function (ev) {
+        if (document.documentElement.dataset.bsTheme == "dark") {
+          document.documentElement.dataset.bsTheme = "light";
+        } else {
+          document.documentElement.dataset.bsTheme = "dark";
+        }
+      });
+    </script>
     <script type="module">
       const grid = document.getElementById("basic-demo");
       grid.addEventListener("columnReordered", (e) => {
@@ -107,7 +120,10 @@
         ></data-grid>
       </div>
       <div class="container g-0 mb-4 mw-100">
-        <p>Fixed height with basic data. This looks odd if you set a height bigger than the number of rows per page. It works better with <code>sticky</code>.</p>
+        <p>
+          Fixed height with basic data. This looks odd if you set a height bigger than the number of rows per page. It works better with
+          <code>sticky</code>.
+        </p>
         <ul>
           <li><code>transform</code> Can transform row content</li>
           <li><code>format</code> Use custom formatting (eg: display a flag, use shoelace number formatting)</li>
@@ -115,7 +131,7 @@
         <data-grid
           id="fixed-demo"
           sticky
-          style="height:400px"
+          style="height: 400px"
           data-url="demo-simple.json"
           data-per-page="25"
           data-expand="true"
@@ -123,6 +139,7 @@
           data-debug="true"
         ></data-grid>
       </div>
+      <button id="darkmode">Toggle dark mode</button>
     </main>
     <footer>
       <hr />
