--- a/demo/index.html
+++ b/demo/index.html
@@ -65,11 +65,11 @@
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <h1>Data Grid</h1>
       <p><em>Standalone data grid web component</em></p>
     </header>
-    <main>
+    <main class="container">
       <ul class="nav nav-pills">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Default</a>
@@ -102,7 +102,7 @@
       </ul>
 
       <div class="container g-0 mb-4 mw-100">
-        <button id="get-selection">Get selection</button>
+        <button id="get-selection" class="btn btn-primary" >Get selection</button>
         <data-grid
           id="basic-demo"
           sticky
@@ -141,7 +141,7 @@
       </div>
       <button id="darkmode">Toggle dark mode</button>
     </main>
-    <footer>
+    <footer class="container">
       <hr />
       Made with <l-i name="heart" set="em"></l-i> in <l-i name="be" set="fl"></l-i> by <a href="https://www.lekoala.be">LeKoala</a>
     </footer>
