--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace/dist/shoelace.js"></script>
 
-    <script type="module" src="../data-grid.min.js"></script>
+    <script type="module" src="../dist/data-grid.min.js"></script>
     <script type="module">
       customElements.whenDefined("data-grid").then(() => {
         console.log("defined");
@@ -31,7 +31,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../data-grid.min.css" />
+    <link rel="stylesheet" href="../dist/data-grid.min.css" />
     <link rel="stylesheet" href="demo.css" />
 
     <script type="module">
