--- a/demo/index.html
+++ b/demo/index.html
@@ -1,149 +1,122 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Grid Demo</title>
 
-    <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js" />
-    <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace/dist/shoelace.js"></script>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Grid Demo</title>
 
-    <script type="module" src="../dist/data-grid.min.js"></script>
-    <script type="module">
-      customElements.whenDefined("data-grid").then(() => {
-        console.log("defined");
-        customElements.get("data-grid").setLabels({
-          items: "rows",
-        });
-      });
-    </script>
+  <link rel="modulepreload" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js" />
+  <script type="module" src="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace/dist/shoelace.js"></script>
 
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%237d6ee7%22></rect><path fill=%22%23fff%22 d=%22M40.45 49.52L40.45 49.52Q40.45 45.17 39.12 42.08Q37.79 38.98 35.52 37.01Q33.24 35.04 30.21 34.12Q27.19 33.20 23.72 33.20L23.72 33.20Q21.54 33.20 19.94 33.34Q18.35 33.48 16.99 33.75L16.99 33.75L16.99 66.12Q18.62 66.52 20.49 66.66Q22.36 66.80 24.33 66.80L24.33 66.80Q32.35 66.80 36.40 62.44Q40.45 58.09 40.45 49.52ZM46.09 49.52L46.09 49.52Q46.09 55.10 44.56 59.21Q43.03 63.33 40.21 66.05Q37.39 68.77 33.37 70.09Q29.36 71.42 24.40 71.42L24.40 71.42Q22.22 71.42 19.50 71.25Q16.78 71.08 14.33 70.33L14.33 70.33Q11.48 69.45 11.48 67.20L11.48 67.20L11.48 32.25Q11.48 31.16 12.02 30.59Q12.57 30.01 13.72 29.67L13.72 29.67Q15.83 28.99 18.48 28.78Q21.13 28.58 23.79 28.58L23.79 28.58Q28.75 28.58 32.86 29.91Q36.98 31.23 39.90 33.85Q42.83 36.47 44.46 40.38Q46.09 44.29 46.09 49.52ZM88.52 51.16L88.52 65.91Q88.52 67.14 87.81 67.95Q87.09 68.77 85.67 69.52L85.67 69.52Q83.97 70.33 80.97 70.94Q77.98 71.56 74.92 71.56L74.92 71.56Q70.16 71.56 66.22 70.26Q62.27 68.97 59.42 66.32Q56.56 63.67 55.00 59.62Q53.43 55.58 53.43 50.07L53.43 50.07Q53.43 44.63 55.07 40.55Q56.70 36.47 59.52 33.78Q62.34 31.10 66.08 29.77Q69.82 28.44 74.04 28.44L74.04 28.44Q76.89 28.44 79.31 28.92Q81.72 29.40 83.42 30.18Q85.12 30.96 86.07 31.91Q87.03 32.86 87.03 33.82L87.03 33.82Q87.03 34.77 86.48 35.45Q85.94 36.13 85.19 36.47L85.19 36.47Q83.35 35.24 80.84 34.19Q78.32 33.14 74.38 33.14L74.38 33.14Q71.11 33.14 68.33 34.22Q65.54 35.31 63.50 37.42Q61.46 39.53 60.30 42.72Q59.15 45.92 59.15 50.07L59.15 50.07Q59.15 54.49 60.34 57.65Q61.53 60.81 63.67 62.85Q65.81 64.89 68.70 65.88Q71.59 66.86 74.99 66.86L74.99 66.86Q77.44 66.86 79.61 66.46Q81.79 66.05 83.01 65.44L83.01 65.44L83.01 52.92L72.75 52.92Q72.54 52.58 72.34 52.01Q72.13 51.43 72.13 50.75L72.13 50.75Q72.13 49.59 72.68 48.95Q73.22 48.30 74.24 48.30L74.24 48.30L85.60 48.30Q86.82 48.30 87.67 49.08Q88.52 49.86 88.52 51.16L88.52 51.16Z%22></path></svg>"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.css" />
-    <!-- include bootstrap just to make sure it doesn't conflict with our styles -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../dist/data-grid.min.css" />
-    <link rel="stylesheet" href="demo.css" />
+  <script type="module" src="../dist/data-grid.min.js"></script>
+  <script type="module">
+    customElements.whenDefined("data-grid").then(() => {
+      console.log("defined");
+      customElements.get("data-grid").setLabels({
+        items: "rows",
+      });
+    });
+  </script>
 
-    <script type="module">
-      document.querySelector("#darkmode").addEventListener("click", function (ev) {
-        if (document.documentElement.dataset.bsTheme == "dark") {
-          document.documentElement.dataset.bsTheme = "light";
-        } else {
-          document.documentElement.dataset.bsTheme = "dark";
-        }
-      });
-    </script>
-    <script type="module">
-      const grid = document.getElementById("basic-demo");
-      grid.addEventListener("columnReordered", (e) => {
-        console.log(e.type, e.detail);
-      });
-      grid.addEventListener("columnResized", (e) => {
-        console.log(e.type, e.detail);
-      });
-      grid.addEventListener("columnVisibility", (e) => {
-        console.log(e.type, e.detail);
-      });
-      grid.addEventListener("rowsSelected", (e) => {
-        console.log(e.type, e.detail);
-      });
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%237d6ee7%22></rect><path fill=%22%23fff%22 d=%22M40.45 49.52L40.45 49.52Q40.45 45.17 39.12 42.08Q37.79 38.98 35.52 37.01Q33.24 35.04 30.21 34.12Q27.19 33.20 23.72 33.20L23.72 33.20Q21.54 33.20 19.94 33.34Q18.35 33.48 16.99 33.75L16.99 33.75L16.99 66.12Q18.62 66.52 20.49 66.66Q22.36 66.80 24.33 66.80L24.33 66.80Q32.35 66.80 36.40 62.44Q40.45 58.09 40.45 49.52ZM46.09 49.52L46.09 49.52Q46.09 55.10 44.56 59.21Q43.03 63.33 40.21 66.05Q37.39 68.77 33.37 70.09Q29.36 71.42 24.40 71.42L24.40 71.42Q22.22 71.42 19.50 71.25Q16.78 71.08 14.33 70.33L14.33 70.33Q11.48 69.45 11.48 67.20L11.48 67.20L11.48 32.25Q11.48 31.16 12.02 30.59Q12.57 30.01 13.72 29.67L13.72 29.67Q15.83 28.99 18.48 28.78Q21.13 28.58 23.79 28.58L23.79 28.58Q28.75 28.58 32.86 29.91Q36.98 31.23 39.90 33.85Q42.83 36.47 44.46 40.38Q46.09 44.29 46.09 49.52ZM88.52 51.16L88.52 65.91Q88.52 67.14 87.81 67.95Q87.09 68.77 85.67 69.52L85.67 69.52Q83.97 70.33 80.97 70.94Q77.98 71.56 74.92 71.56L74.92 71.56Q70.16 71.56 66.22 70.26Q62.27 68.97 59.42 66.32Q56.56 63.67 55.00 59.62Q53.43 55.58 53.43 50.07L53.43 50.07Q53.43 44.63 55.07 40.55Q56.70 36.47 59.52 33.78Q62.34 31.10 66.08 29.77Q69.82 28.44 74.04 28.44L74.04 28.44Q76.89 28.44 79.31 28.92Q81.72 29.40 83.42 30.18Q85.12 30.96 86.07 31.91Q87.03 32.86 87.03 33.82L87.03 33.82Q87.03 34.77 86.48 35.45Q85.94 36.13 85.19 36.47L85.19 36.47Q83.35 35.24 80.84 34.19Q78.32 33.14 74.38 33.14L74.38 33.14Q71.11 33.14 68.33 34.22Q65.54 35.31 63.50 37.42Q61.46 39.53 60.30 42.72Q59.15 45.92 59.15 50.07L59.15 50.07Q59.15 54.49 60.34 57.65Q61.53 60.81 63.67 62.85Q65.81 64.89 68.70 65.88Q71.59 66.86 74.99 66.86L74.99 66.86Q77.44 66.86 79.61 66.46Q81.79 66.05 83.01 65.44L83.01 65.44L83.01 52.92L72.75 52.92Q72.54 52.58 72.34 52.01Q72.13 51.43 72.13 50.75L72.13 50.75Q72.13 49.59 72.68 48.95Q73.22 48.30 74.24 48.30L74.24 48.30L85.60 48.30Q86.82 48.30 87.67 49.08Q88.52 49.86 88.52 51.16L88.52 51.16Z%22></path></svg>" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/last-icon@2/last-icon.css" />
+  <!-- include bootstrap just to make sure it doesn't conflict with our styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../dist/data-grid.min.css" />
+  <link rel="stylesheet" href="demo.css" />
 
-      document.getElementById("get-selection").addEventListener("click", (e) => {
-        alert(JSON.stringify(grid.getSelection("id")));
-      });
-    </script>
-  </head>
+  <script type="module">
+    document.querySelector("#darkmode").addEventListener("click", function (ev) {
+      if (document.documentElement.dataset.bsTheme == "dark") {
+        document.documentElement.dataset.bsTheme = "light";
+      } else {
+        document.documentElement.dataset.bsTheme = "dark";
+      }
+    });
+  </script>
+  <script type="module">
+    const grid = document.getElementById("basic-demo");
+    grid.addEventListener("columnReordered", (e) => {
+      console.log(e.type, e.detail);
+    });
+    grid.addEventListener("columnResized", (e) => {
+      console.log(e.type, e.detail);
+    });
+    grid.addEventListener("columnVisibility", (e) => {
+      console.log(e.type, e.detail);
+    });
+    grid.addEventListener("rowsSelected", (e) => {
+      console.log(e.type, e.detail);
+    });
 
-  <body>
-    <header class="container">
-      <h1>Data Grid</h1>
-      <p><em>Standalone data grid web component</em></p>
-    </header>
-    <main class="container">
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Default</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="responsive.html">Responsive</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="server.html">Server</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="actions.html">Actions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="api.html">API</a>
-        </li>
-      </ul>
+    document.getElementById("get-selection").addEventListener("click", (e) => {
+      alert(JSON.stringify(grid.getSelection("id")));
+    });
+  </script>
+</head>
 
+<body>
+  <header class="container">
+    <h1>Data Grid</h1>
+    <p><em>Standalone data grid web component</em></p>
+  </header>
+  <main class="container">
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Default</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="responsive.html">Responsive</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="server.html">Server</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="actions.html">Actions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="api.html">API</a>
+      </li>
+    </ul>
+
+    <p>
+      Url should point to a json file that return a plain array or a json response with a <code>data</code> key that contains an array
+    </p>
+
+    <ul>
+      <li><code>sticky</code> to enable stick headers and footers (usable with fixed height)</li>
+      <li><code>expand=true</code> to allow cell content to spawn over multiple lines</li>
+      <li><code>resizable=true</code> to make resizable columns</li>
+      <li><code>autosize=true</code> to compute column sizes automatically</li>
+      <li><code>sort=true</code> to make sortable columns</li>
+      <li><code>selectable=true</code> to allow row selection</li>
+    </ul>
+
+    <div class="container g-0 mb-4 mw-100">
+      <button id="get-selection" class="btn btn-primary mb-3">Get selection</button>
+      <data-grid id="basic-demo" sticky data-url="demo.json" data-per-page="25" data-expand="true" data-selectable="true" data-menu="true"
+        data-filter="true" data-resizable="true" data-autosize="true" data-reorder="true" data-sort="true" data-debug="true"></data-grid>
+    </div>
+    <div class="container g-0 mb-4 mw-100">
       <p>
-        Url should point to a json file that return a plain array or a json response with a <code>data</code> key that contains an array
+        Fixed height with basic data. This looks odd if you set a height bigger than the number of rows per page. It works better with
+        <code>sticky</code>.
       </p>
-
       <ul>
-        <li><code>sticky</code> to enable stick headers and footers (usable with fixed height)</li>
-        <li><code>expand=true</code> to allow cell content to spawn over multiple lines</li>
-        <li><code>resizable=true</code> to make resizable columns</li>
-        <li><code>autosize=true</code> to compute column sizes automatically</li>
-        <li><code>sort=true</code> to make sortable columns</li>
-        <li><code>selectable=true</code> to allow row selection</li>
+        <li><code>transform</code> Can transform row content</li>
+        <li><code>format</code> Use custom formatting (eg: display a flag, use shoelace number formatting)</li>
       </ul>
+      <data-grid id="fixed-demo" sticky style="height: 400px" data-url="demo-simple.json" data-per-page="25" data-expand="true"
+        data-selectable="true" data-debug="true"></data-grid>
+    </div>
+    <button id="darkmode">Toggle dark mode</button>
+  </main>
+  <footer class="container">
+    <hr />
+    Made with <l-i name="heart" set="em"></l-i> in <l-i name="be" set="fl"></l-i> by <a href="https://www.lekoala.be">LeKoala</a>
+  </footer>
+</body>
 
-      <div class="container g-0 mb-4 mw-100">
-        <button id="get-selection" class="btn btn-primary" >Get selection</button>
-        <data-grid
-          id="basic-demo"
-          sticky
-          data-url="demo.json"
-          data-per-page="25"
-          data-expand="true"
-          data-selectable="true"
-          data-menu="true"
-          data-filter="true"
-          data-resizable="true"
-          data-autosize="true"
-          data-reorder="true"
-          data-sort="true"
-          data-debug="true"
-        ></data-grid>
-      </div>
-      <div class="container g-0 mb-4 mw-100">
-        <p>
-          Fixed height with basic data. This looks odd if you set a height bigger than the number of rows per page. It works better with
-          <code>sticky</code>.
-        </p>
-        <ul>
-          <li><code>transform</code> Can transform row content</li>
-          <li><code>format</code> Use custom formatting (eg: display a flag, use shoelace number formatting)</li>
-        </ul>
-        <data-grid
-          id="fixed-demo"
-          sticky
-          style="height: 400px"
-          data-url="demo-simple.json"
-          data-per-page="25"
-          data-expand="true"
-          data-selectable="true"
-          data-debug="true"
-        ></data-grid>
-      </div>
-      <button id="darkmode">Toggle dark mode</button>
-    </main>
-    <footer class="container">
-      <hr />
-      Made with <l-i name="heart" set="em"></l-i> in <l-i name="be" set="fl"></l-i> by <a href="https://www.lekoala.be">LeKoala</a>
-    </footer>
-  </body>
 </html>
